Improve: Use lower precision integers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "ndarray",
         "numba",
-        "schulze"
+        "prange",
+        "schulze",
+        "Warshall"
     ]
 }
