--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
+# C extensions and object files
 *.so
+*.o
 
 # Distribution / packaging
 .Python
