Improve: Compare CUDA and NumBa

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
         "prange",
         "schulze",
         "Warshall"
-    ]
+    ],
+    "files.associations": {
+        "random": "cpp"
+    }
 }
