Docs: Extend H100 benchmarks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Warshall"
     ],
     "files.associations": {
-        "random": "cpp"
+        "random": "cpp",
+        "charconv": "cpp"
     }
 }
