Improve: Use Kepler intrinsics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     ],
     "files.associations": {
         "random": "cpp",
-        "charconv": "cpp"
+        "charconv": "cpp",
+        "__target_macros": "cpp"
     }
 }
